# AgentDeepDive

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  INSTALL.md  INSTALL.zh.md  LICENSE  README.en.md  README.md  alembic.ini  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 010b086ea8c4_add_multi_tenancy_and_rbac_tables.py  05abe44bc47d_initial_schema.py  c9709d79a498_add_roles_skills_scheduler.py  dcaf833e3083_add_audit_logs_table.py  f1b03dc2e402_add_hash_and_previous_hash_to_audit_logs.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
docker/: docker-compose.prod.yml  docker-compose.yml  init-db.sql
docs/: agentdeepdive_todo_and_roadmap.md  backlog.md  cli_user_manual.md  ops_guide.md  system_components_and_environments.en.md  system_components_and_environments.md  test_guide.md  user_guide.md
docs/deployment/: kubernetes_deployment_guide.en.md  kubernetes_deployment_guide.md
docs/examples/: snake_game_dag.yaml
docs/guides/: cockpit_user_guide.md  security_opa_manual.md  skill_development.md
examples/: snake_game_tutorial.md
examples/snake_game/: index.html
k8s/: agentdeep-k8s.yaml
roles/content_writer/: role.yaml
roles/data_analyst/: role.yaml
roles/editor/: role.yaml
roles/qa_tester/: role.yaml
roles/security_auditor/: role.yaml
roles/senior_coder/: role.yaml
roles/supervisor/: role.yaml
roles/tech_writer/: role.yaml
roles/translator/: role.yaml
roles/ui_designer/: role.yaml
scripts/: install_cleanup_cron.sh  migrate_db.py  publish_release.sh  run_security_scans.sh  sandbox_cleanup_daemon.py  security_scan.py  setup_autocomplete.sh  setup_security_hooks.sh  startAll.sh  startDocker.sh  startFastAPI.sh  startUI.sh
skills/_template/: skill.yaml
skills/bug_fixer/: skill.yaml
skills/code_analysis/: skill.yaml
skills/code_generator/: skill.yaml
skills/code_reviewer/: skill.yaml
skills/doc_writer/: skill.yaml
skills/perf_optimizer/: skill.yaml
skills/test_generator/: skill.yaml
src/: config.py  database.py
tests/: conftest.py
(+196 files in other folders)
