[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdeep"
version = "0.1.0-alpha"
description = "Multi-Agent Orchestration Platform for Super Engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AgentDeepDive Team"},
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Vector Database
    "pymilvus>=2.4.0",

    # LLM Integration
    "litellm>=1.40.0",

    # LangGraph (Agent State Graph)
    "langgraph>=0.2.0",

    # Embeddings
    "sentence-transformers>=3.0.0",

    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",

    # Utilities
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.0",
    "celery>=5.3.0",
    "kubernetes>=36.0.0",
    "cryptography>=42.0.0",
    "pynacl>=1.5.0",
    "prompt_toolkit>=3.0.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
agentdeep = "src.cli.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: Integration tests requiring external services like Redis or PostgreSQL."
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
